fix for Python3 on Windows

--- a/PyIlmBase/CMakeLists.txt
+++ b/PyIlmBase/CMakeLists.txt
@@ -37,11 +37,17 @@ SET (BUILD_WITH_INSTALL_RPATH 1)
 SET (LIB_TYPE SHARED)
 
 FIND_PACKAGE ( PythonLibs REQUIRED )
-FIND_PACKAGE ( PythonInterp REQUIRED )
-FIND_PACKAGE ( Boost
-	COMPONENTS Python
-)
-FIND_PACKAGE ( NumPy )
+#FIND_PACKAGE ( PythonInterp REQUIRED )
+FIND_PACKAGE ( Boost)
+SET(Boost_LIBRARIES
+    optimized ${Boost_INCLUDE_DIR}/stage/x86_64/lib/libboost_python3-vc140-mt-1_64.lib
+    debug ${Boost_INCLUDE_DIR}/stage/x86_64/lib/libboost_python3-vc140-mt-gd-1_64.lib
+    )
+#FIND_PACKAGE ( NumPy )
+ADD_DEFINITIONS(
+    -DBOOST_PYTHON_STATIC_LIB
+    -DBOOST_ALL_NO_LIB
+    )
 
 INCLUDE_DIRECTORIES (
 	${ILMBASE_PACKAGE_PREFIX}/include/OpenEXR
@@ -49,9 +55,13 @@ INCLUDE_DIRECTORIES (
 	PyImath
 	PyImathNumpy
 	${PYTHON_INCLUDE_PATH}
+    ${Boost_INCLUDE_DIR}
 )
 
-LINK_DIRECTORIES ( ${ILMBASE_PACKAGE_PREFIX}/lib )
+LINK_DIRECTORIES ( 
+    ${ILMBASE_PACKAGE_PREFIX}/lib 
+    ${Boost_INCLUDE_DIR}/stage/x86_64/lib
+    )
 MESSAGE ( "ILMBASE_PACKAGE_PREFIX = " ${ILMBASE_PACKAGE_PREFIX})
 
 
