--- a/PyIlmBase/PyIex/CMakeLists.txt
+++ b/PyIlmBase/PyIex/CMakeLists.txt
@@ -15,21 +15,22 @@ INSTALL ( TARGETS PyIex
 	lib
 )
 
-ADD_LIBRARY ( iexmodule ${LIB_TYPE}
+ADD_LIBRARY ( iex ${LIB_TYPE}
 	iexmodule.cpp
 )
 
-SET_TARGET_PROPERTIES ( iexmodule
-	PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
+SET_TARGET_PROPERTIES ( iex
+	PROPERTIES PREFIX "" SUFFIX ".pyd" BUILD_WITH_INSTALL_RPATH ON
 )
 
-TARGET_LINK_LIBRARIES ( iexmodule
+TARGET_LINK_LIBRARIES ( iex
 	PyIex
 	Iex${ILMBASE_LIBSUFFIX}
 	${Boost_LIBRARIES}
 )
 
-INSTALL ( TARGETS iexmodule
-	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
-)
+INSTALL ( TARGETS iex PyIex
+    #DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
+    DESTINATION ${INSTALL_DIR}
+    )
 
