--- a/PyIlmBase/PyImath/CMakeLists.txt
+++ b/PyIlmBase/PyImath/CMakeLists.txt
@@ -33,6 +33,46 @@ ADD_LIBRARY ( PyImath ${LIB_TYPE}
     PyImathVec4fd.cpp
     PyImathVec4siArray.cpp
     PyImathVec4si.cpp
+
+    PyImath.h
+    PyImathAutovectorize.h
+    PyImathBasicTypes.h
+    PyImathBox.h
+    PyImathBoxArrayImpl.h
+    PyImathColor.h
+    PyImathColor3ArrayImpl.h
+    PyImathColor4Array2DImpl.h
+    PyImathColor4ArrayImpl.h
+    PyImathDecorators.h
+    PyImathEuler.h
+    PyImathExport.h
+    PyImathFixedArray.h
+    PyImathFixedArray2D.h
+    PyImathFixedMatrix.h
+    PyImathFixedVArray.h
+    PyImathFrustum.h
+    PyImathFun.h
+    PyImathLine.h
+    PyImathM44Array.h
+    PyImathMathExc.h
+    PyImathMatrix.h
+    PyImathOperators.h
+    PyImathPlane.h
+    PyImathQuat.h
+    PyImathRandom.h
+    PyImathShear.h
+    PyImathStringArray.h
+    PyImathStringArrayRegister.h
+    PyImathStringTable.h
+    PyImathTask.h
+    PyImathUtil.h
+    PyImathVec.h
+    PyImathVec2Impl.h
+    PyImathVec3ArrayImpl.h
+    PyImathVec3Impl.h
+    PyImathVec4ArrayImpl.h
+    PyImathVec4Impl.h
+    PyImathVecOperators.h
 )
 
 TARGET_LINK_LIBRARIES ( PyImath
