--- a/PyIlmBase/CMakeLists.txt
+++ b/PyIlmBase/CMakeLists.txt
@@ -43,11 +43,12 @@ SET (LIB_TYPE SHARED)
 FIND_PACKAGE (PythonLibs REQUIRED )
 #FIND_PACKAGE ( PythonInterp REQUIRED )
 FIND_PACKAGE (Boost COMPONENTS python3 REQUIRED)
-#MESSAGE(STATUS ${Boost_LIBRARIES})
+Set(Boost_LIBRARIES)
+MESSAGE(STATUS ${Boost_LIBRARIES})
 #FIND_PACKAGE ( NumPy )
 ADD_DEFINITIONS(
     #-DBOOST_PYTHON_STATIC_LIB
-    -DBOOST_ALL_NO_LIB # avoid boost autolink
+    #-DBOOST_ALL_NO_LIB # avoid boost autolink
     )
 
 INCLUDE_DIRECTORIES (
@@ -61,6 +62,7 @@ INCLUDE_DIRECTORIES (
 
 LINK_DIRECTORIES ( 
     ${ILMBASE_PACKAGE_PREFIX}/lib 
+    ${Boost_INCLUDE_DIR}/stage/lib
     )
 MESSAGE ( "ILMBASE_PACKAGE_PREFIX = " ${ILMBASE_PACKAGE_PREFIX})
 
