--- a/AbcOpenGL/AbcOpenGL/CMakeLists.txt
+++ b/AbcOpenGL/AbcOpenGL/CMakeLists.txt
@@ -35,6 +35,7 @@
 ##-*****************************************************************************
 
 SET(H_FILES
+    All.h
     DrawContext.h
     Drawable.h
     Export.h
