--- a/PyIlmBase/PyAbcOpenGL/CMakeLists.txt
+++ b/PyIlmBase/PyAbcOpenGL/CMakeLists.txt
@@ -53,3 +53,11 @@ TARGET_LINK_LIBRARIES(alembicgl
     ${ALEMBIC_LIBRARIES}
     )
 
+SET_TARGET_PROPERTIES(alembicgl
+    PROPERTIES PREFIX "" SUFFIX ".pyd"
+)
+
+INSTALL(TARGETS alembicgl
+    DESTINATION ${INSTALL_DIR}
+)
+
